# Mini_Studio_Shoot_em_Up_2

./: .gitignore  CMakeLists.txt  Game.h  GameObject.h  Map.cpp  Map.h  TextureCache.cpp  TextureCache.h  configure.bat  reset.bat  setup_sfml.bat  setup_struct.bat  setup_windows.bat
Document/: Nouveau Document texte.txt  vs-detection-guide.md
Document/Diagramme UML/explication Diagramme UML/: audio-system-documentation.md  game-explanation.md  resource-manager-explanation.md
Game/: CMakeLists.txt
Game/include/: BehaviorTree.h  Boss.h  BossBehavior.h  BossBullet.h  Collision.h  DecorType.h  EntityType.h  Game.h  GameObject.h  ISpawner.h  Ship.h
Game/src/: BehaviorTree.cpp  Boss.cpp  BossBehavior.cpp  BossBullet.cpp  Collision.cpp  DecorType.cpp  EntityType.cpp  Game.cpp  GameObject.cpp  ISpawner.cpp  Ship.cpp
Game_Engine/: CMakeLists.txt
Game_Engine/include/: Composite.h  Game_Engine.h  IGameObject.h  IShape.h  Layer.h  RandomNumber.h  SceneBase.h  SceneManager.h  SpriteSheet.h  State_Machine.h  TextureCache.h  Tools.h
Game_Engine/src/: Composite.cpp  Game_Engine.cpp  IGameObject.cpp  IShape.cpp  Layer.cpp  RandomNumber.cpp  SceneBase.cpp  SceneManager.cpp  TextureCache.cpp  Tools.cpp
Game_Launcher/: CMakeLists.txt
Game_Launcher/src/: main.cpp
scripts/: Check_Prerequisites.bat  configure.bat  reset.bat  setup_deps.bat  setup_sfml.bat
